# life-under-control

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  CONTEXT.md  docker-compose.yml  package.json  pnpm-lock.yaml  skills-lock.json
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/src/luc_api/: __init__.py  composition.py  health.py  main.py  settings.py
apps/api/src/luc_api/finance/: __init__.py
apps/api/src/luc_api/finance/adapters/: __init__.py
apps/api/src/luc_api/finance/application/: __init__.py  agenda.py  agenda_projection.py  analytics_view.py  bill_card.py  calendar.py  digest_send_log.py  due_digest_content.py  finance_aggregates.py  historical_analysis.py  monthly_panorama.py  notifier.py  occurrence_state.py  punctuality.py  reference_period_bars.py  reference_period_shape.py  send_due_digest.py  year_map.py
apps/api/src/luc_api/finance/domain/: bill.py  payment.py
apps/api/src/luc_api/http/: __init__.py  identity.py  me.py  problems.py
apps/api/src/luc_api/identity/: __init__.py
apps/api/src/luc_api/identity/application/: __init__.py  can_sign_in.py  household_repo.py  link_google.py  link_phone.py  user_repo.py  (+1 more)
apps/api/src/luc_api/shared/: __init__.py
apps/api/tests/: conftest.py  test_civil_date.py  test_composition.py  test_health.py  test_money.py  test_settings.py
apps/api/tests/finance/application/: test_agenda.py  test_analytics_view.py  test_bill_card.py  test_calendar.py  test_due_digest_content.py  test_finance_aggregates.py  test_historical_analysis.py  test_monthly_panorama.py  test_occurrence_state.py  test_punctuality.py  test_reference_period_bars.py  test_reference_period_shape.py  test_send_due_digest.py
apps/api/tests/finance/domain/: test_bill.py  test_payment.py
apps/api/tests/http/: test_identity.py  test_problems.py
apps/api/tests/identity/application/: test_can_sign_in.py  test_household_repo.py  test_link_google.py  test_link_phone.py  test_resolve_authenticated_user.py
apps/api/tests/identity/domain/: test_access.py  test_household.py  test_phone.py
apps/api/tests/shared/adapters/: test_system_clock.py
apps/api/tests/shared/application/: test_clock.py
apps/api/tests/shared/domain/: test_civil_date.py  test_errors.py  test_money.py
(+288 files in other folders)
