[project]
name = "luc-api"
version = "0.0.0"
description = "Backend do Life Under Control — domínio, ports/adapters e bordas de servidor (ADR-0014)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.12",
    "pyright>=1.1.390",
    "import-linter>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luc_api"]

# --- Régua panlabs: ruff (format + lint) ---------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
# Set curado: erros de estilo, pyflakes, imports, bugbear, comprehensions,
# pyupgrade, simplify, naming, docstrings (Google), pathlib, async, pylint,
# imports proibidos e regras próprias do ruff.
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "N",
    "D",
    "PTH",
    "ASYNC",
    "PL",
    "TID",
    "RUF",
]
ignore = [
    "E501", # comprimento de linha é do formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Testes não exigem docstring nem proíbem valores mágicos.
"tests/**" = ["D", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- pyright strict ------------------------------------------------------
[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

# --- pytest / pytest-asyncio --------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# --- import-linter: fronteiras executáveis (ADR-0014) --------------------
[tool.importlinter]
root_package = "luc_api"

[[tool.importlinter.contracts]]
name = "shared segue camadas hexagonais (domain < application < adapters)"
type = "layers"
layers = [
    "adapters",
    "application",
    "domain",
]
containers = ["luc_api.shared"]
